   * remove some old backward compatibility support
   * set_name in attack modification [effect] no longer change the weapon's 
     description, use the new set_description instead
   * hit=yes in anim is now an alias of hit=hit,kill instead of hit=hit
     this should fix the sliding bug and fix more bugs than it creates
   * friendlier boolean matching for unit [filter] and unit [wml_filter]
 * user interface:
   * new sounds for user interface events
   * added the option to show warnings about deprecated WML usage
   * added the "ignore all" option to continue observing during massive OOS
   * show total amount of visible villages (patch #698)
 * misceleanous changes and bug fixes
   * an friendly healer hill now stop poisoned unit to lose HP
   * a unit that dies while attacking will now correctly play it's own death
   * turn bell can sound if other soundFX are turned off
   * the first turn starts again with the proper time of day (bug 8637)
   * removes the scaling handling in the halo, removing quite some code
   * fixed various problems found by valgrind, note some invalid access are
     now protected by asserts so there might be more crashes instead of silent
     memory corruptions (bug #8715 and bug #8756)
   * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
   * fixed autosaves not getting deleted for last campaign scenario and 
     multiplayer (bug #8762)
   * Performance : wml compression is done in the helper threads instead of
     the main thread

Version 1.3.1:
 * Campaignd
   * first argument is number of threads to use, defaults to 5
 * campaigns
   * Eastern Invasion:
     * Drowned Planes the dragon starts on grassland
     * The Crossing, fixed a bug which prevented the undead leader spawned
        at turn 8 to have a keep
     * The Duel the keep is replaced by a castle tile instead of grass
   * Heir to the Throne
     * removed Mountain Pass and Valley of Statues from the repository